--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       </h2>
       <h3>
       (task/category)
-      </h3><br>
+      </h3>
+      <h4>
+      design(green)/outreach(red)/operations(blue)
+      </h4><br>
       <input type="text" name='Task-Input' id='task-input'><br>
       <button type='button' id='task-submit' onClick='dump();'>
       Submit
